Fixed h1 img alt text font-size too big.

--- a/css/javascript-min-width-45em.css
+++ b/css/javascript-min-width-45em.css
@@ -23,6 +23,10 @@ header nav h1 {
         width: 200px;
     } 
 
+    header .banner h1 img {
+        font-size: 30px;
+    }
+
     header .banner img {
         width: 100%;
     }
